# sausage-skin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/rules/: css-style.mdc  responses-and-coding-style.mdc  webpage-generation.mdc
music/a2024/a03_mar/a07_tunings Project/: a07_tunings.als
music/a2024/a03_mar/a14_quark Project/: a14_quark.als
music/a2024/a03_mar/st_kilda_beach/: st_kilda_beach.als  st_kilda_beach.wav.asd
music/a2024/a06_jun/a20_deadlift/: deadlift.pxd  track.yml
music/a2024/a06_jun/a21_squats/: squats.pxd  track.yml
music/a2024/a06_jun/a23_bench_press/: track.yml
music/a2024/a07_jul/a02_spaghetti_night/: README.md  original.wav.asd  spaghetti_night.pxd  track.yml
music/a2024/a07_jul/a05_overhead_press/: README.md  (+4 more)
scripts/: deploy.sh
src/: main.py
src/generate/: const.py  discover_tracks.py  errors.py  index_html.py  main.py  track_yml.py
src/generate/files/: dates.py  main.py  urls.py
src/generate/log/: log.py
src/generate/pages/: home.py  track.py
src/generate/process/: clean.py  copy.py  main.py  process.py  single.py  thumb.py
src/generate/template/: escape.py  render.py
src/generate/tracks/: dates.py  errors.py  main.py  tracks.py  urls.py  validate.py
src/generate/yaml/: errors.py  main.py  validate.py
src/web/css/: app.css  index.css
src/web/layout/: index.html
tests/: conftest.py  test_discover_tracks.py  test_generate_index_html.py  test_index_html.py  test_process_tracks.py  test_track_yml.py  test_track_yml_validation.py
tests/generate/main/: test_main.py
(+429 files in other folders)
