[project]
name = "sausage-skin"
version = "0.1.0"
description = "Web site for sausage skin music"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generate"]

[dependency-groups]
dev = ["pytest"]
