[project]
name = "sausage-skin"
version = "0.1.0"
description = "Web site for sausage skin music"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyyaml"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pre-commit", # Manage pre commit git hooks
    "pytest-xdist", # Run tests in parallel
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto -s"
